# jdbc-wrapper

./: .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: check.yaml  lint.yaml  postgresql.yaml  sqlite.yaml  test.yaml
examples/: example_sqlite_async.py  example_sqlite_async_sqlalchemy.py  example_sqlite_sqlalchemy.py
examples/postgresql/: example.py  example_async.py  example_async_sqlalchemy.py  example_sqlalchemy.py
examples/sqlite/: example.py  example_async_sqlalchemy.py
src/examples/: example_sqlite.py  example_sqlite_async.py  example_sqlite_async_sqlalchemy.py  example_sqlite_sqlalchemy.py
src/jdbc_wrapper/: __init__.py  abc.py  connection.py  connection_async.py  const.py  cursor.py  cursor_async.py  log.py  pipeline.py  types.py  utils.py
src/jdbc_wrapper/_loader/: __init__.py  base.py  github.py  mssql.py  postgresql.py  sqlite.py
src/jdbc_wrapper/_sqlalchemy/: __init__.py  base.py  mssql.py  pg_jdbc_wrapper.py  postgresql.py  sqlite.py
src/jdbc_wrapper/_sqlalchemy/_connector/: config.py  connection_async.py  cursor_async.py  main.py  utils.py  utils_async.py
src/jdbc_wrapper/loader/: base.py
src/pyjdbc2/: __init__.py  abc.py  connection.py  connection_async.py  const.py  cursor.py  cursor_async.py  exceptions.py  types.py  utils.py
tests/: conftest.py  test_attrs.py  test_connect.py  test_ping.py  test_thread.py  test_transaction.py
