[project]
name = "pyjdbc2"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "phi", email = "phi.friday@gmail.com" }
]
dependencies = [
    "jpype1>=1.2.1",
    "typing-extensions>=4.4.0",
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Framework :: AnyIO",
    "Framework :: AsyncIO",
    "Framework :: Trio",
]
requires-python = ">= 3.9"

[project.optional-dependencies]
async = ["anyio>=4.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ruff==0.5.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pyjdbc2"]
