[project]
name = "jdbc-wrapper"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "phi", email = "phi.friday@gmail.com" }]
dependencies = [
    "jpype1>=1.2.1",
    "typing-extensions>=4.4.0",
    "tomli>=1.1.0 ; python_version < '3.11'",
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Framework :: AsyncIO",
]
requires-python = ">= 3.9"

[project.optional-dependencies]
asyncio = ["greenlet"]
sqlalchemy = ["sqlalchemy[asyncio]>=2", "jdbc-wrapper[asyncio]"]
typing = ["types-greenlet"]
test = [
    "jdbc-wrapper[asyncio,sqlalchemy]",
    "pytest>=8.2.2",
    "filelock>=3.15.4",
    "pytest-xdist[psutil]>=3.6.1",
    "anyio>=4.4.0",
    "pytest-dotenv>=0.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ruff==0.5.2",
    "pre-commit>=3.7.1",
    "jdbc-wrapper[typing,test,asyncio,sqlalchemy]",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/jdbc_wrapper"]
